--- a/_pages/store.html
+++ b/_pages/store.html
@@ -18,8 +18,8 @@ keywords: anagh sharma, design, portfolio, development, designer
         <div class="large-8 medium-8 small-12 columns">
           <div class="row">
             <div class="large-6 medium-6 small-12 columns left-collapse">
-              <div class="behance-store-thumbnail square mb2">
-                <a href="https://www.microsoft.com/en-us/store/p/view-for-behance/9wzdncrdm1g9" target="_blank" class="action-button font-bold float-center">DOWNLOAD FROM WINDOWS STORE</a>
+              <div style="position: relative;" class="behance-store-thumbnail square mb2">
+                <a href="https://www.microsoft.com/en-us/store/p/view-for-behance/9wzdncrdm1g9" target="_blank" style="position:absolute; bottom:1rem; border: 1px solid #212121;" class="action-button font-bold ml5">DOWNLOAD FROM WINDOWS STORE</a>
               </div>
             </div>
             <div class="large-6 medium-6 columns right-collapse">
