Added Carol to store page

--- a/_pages/store.html
+++ b/_pages/store.html
@@ -7,10 +7,10 @@ keywords: anagh sharma, design, portfolio, development, designer
 ---
 
 <div class="row hero-row mv6">
-  <div class="large-8 small-12 columns mt5">
+  <div class="large-8 small-12 columns mt5 mb5">
     <div class="horizontal-bar"></div>
     <h1 class="font-light">St<span class="font-primary-color">o</span>re</h1>
-    <p class="mb5">Buy and download awesome stuff. Coming Soon.</p>
+    <!-- <p class="mb5">Buy and download awesome stuff. Coming Soon.</p> -->
   </div>
 </div>
 <div class="row mt6 mb6">
@@ -18,15 +18,14 @@ keywords: anagh sharma, design, portfolio, development, designer
         <div class="large-8 medium-8 small-12 columns">
           <div class="row">
             <div class="large-6 medium-6 small-12 columns left-collapse">
-              <div style="position: relative;" class="behance-store-thumbnail square mb2">
-                <a href="https://www.microsoft.com/en-us/store/p/view-for-behance/9wzdncrdm1g9" target="_blank" style="position:absolute; bottom:1rem; border: 1px solid #212121;" class="action-button font-bold ml5">DOWNLOAD FROM WINDOWS STORE</a>
+              <div class="behance-store-thumbnail store-product-container square mb2">
+                <a href="https://www.microsoft.com/en-us/store/p/view-for-behance/9wzdncrdm1g9" target="_blank" class="action-button font-bold ml5">DOWNLOAD FROM WINDOWS STORE</a>
               </div>
             </div>
             <div class="large-6 medium-6 columns right-collapse">
-              <a href="" class="heading">
-                <div class="placeholder square mb2">
-                </div>
-              </a>
+              <div class="carol-store-thumbnail store-product-container square mb2">
+                <a href="https://dribbble.com/shots/3679922-macOS-Lyrics-App" target="_blank" class="action-button font-bold">COMING SOON</a>
+              </div>
             </div>
           </div>
           <div class="row">
