Added wallpapers to store page

--- a/_pages/store.html
+++ b/_pages/store.html
@@ -17,25 +17,26 @@ keywords: anagh sharma, design, portfolio, development, designer
     <div class="row">
         <div class="large-8 medium-8 small-12 columns">
           <div class="row">
-            <div class="large-6 medium-6 small-12 columns left-collapse">
+            <div class="large-6 medium-6 small-12 columns left-collapse small-collapse">
               <div class="behance-store-thumbnail store-product-container square mb2">
-                <a href="https://www.microsoft.com/en-us/store/p/view-for-behance/9wzdncrdm1g9" target="_blank" class="action-button font-bold ml5">DOWNLOAD FROM WINDOWS STORE</a>
+                <a href="https://www.microsoft.com/en-us/store/p/view-for-behance/9wzdncrdm1g9" target="_blank" class="cta action-button font-bold ml5">DOWNLOAD FROM WINDOWS STORE</a>
               </div>
             </div>
-            <div class="large-6 medium-6 columns right-collapse">
+            <div class="large-6 medium-6 columns right-collapse small-collapse">
               <div class="carol-store-thumbnail store-product-container square mb2">
-                <a href="https://dribbble.com/shots/3679922-macOS-Lyrics-App" target="_blank" class="action-button font-bold">COMING SOON</a>
+                <a href="https://dribbble.com/shots/3679922-macOS-Lyrics-App" target="_blank" class="cta action-button font-bold">COMING SOON</a>
               </div>
             </div>
           </div>
           <div class="row">
-            <a href="" class="heading">
-              <div class="placeholder horizontal-rect-8 mb2">
-              </div>
-            </a>
+            <div class="columns left-collapse right-collapse small-collapse">
+                <div class="wallpapers-store-thumbnail store-product-container horizontal-rect-8 mb2">
+                    <a href="" target="_blank" style="position:absolute; left: 5%; margin: auto; bottom: 9%;" class="action-button font-bold">BUY NOW</a>
+                </div>
+            </div>
           </div>
         </div>
-        <div class="large-4 medium-4 columns small-collapse">
+        <div class="large-4 medium-4 columns hide-for-small-only">
           <a href="" class="heading">
             <div class="placeholder vertical-rect mb2">
             </div>
