Added promote section on store page

--- a/_pages/store.html
+++ b/_pages/store.html
@@ -37,10 +37,8 @@ keywords: anagh sharma, design, portfolio, development, designer
           </div>
         </div>
         <div class="large-4 medium-4 columns hide-for-small-only">
-          <a href="" class="heading">
-            <div class="placeholder vertical-rect mb2">
-            </div>
-          </a>
+          <div class="promote-store-thumbnail vertical-rect mb2">
+          </div>
         </div>
       </div>
     </div>
