Updated XBOX project

--- a/_pages/projects/xbox.html
+++ b/_pages/projects/xbox.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: XBOX Project
-description: Re-thinking the XBOX experience on iPhone
+description: Re-thinking the XBOX experience on mobile
 permalink: '/projects/xbox/'
 keywords: design, portfolio, development, designer
 ---
@@ -25,14 +25,14 @@ keywords: design, portfolio, development, designer
         </div>
         <div class="row">
             <div class="large-3 medium-3 small-collapsed columns">
-                <div class="content-table-bar" style="display: inline-block; height: 12.5 rem;"></div>
+                <div class="content-table-bar" style="display: inline-block; height: 10.5rem;"></div>
                 <ul class="vertical-menu no-bullet ml3" style="display: inline-block; vertical-align: top;">
                     <li class="pv1 font-dark">Overview</li>
                     <li class="pv1 font-dark">Problem</li>
                     <li class="pv1 font-dark">Ideas</li>
                     <li class="pv1 font-dark">IA</li>
                     <li class="pv1 font-dark">Visual Design</li>
-                    <li class="pv1 font-dark">Learnings</li>
+                    <!-- <li class="pv1 font-dark">Learnings</li> -->
                 </ul>
             </div>
             <div class="large-7 medium-7 end columns">
@@ -70,6 +70,7 @@ keywords: design, portfolio, development, designer
                 <img src="/assets/images/projects/xbox/cs-first.jpg" class="mt4"/>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Visual Design</h5>
                 <img src="/assets/images/projects/xbox/cs-second.jpg" class="mt4"/>
+                <img src="/assets/images/projects/xbox/cs-third.jpg" class="mt4"/>
             </div>
         </div> 
       </div>
