Updated about page intro

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -7,18 +7,27 @@ keywords: anagh sharma, design, portfolio, development, designer
 ---
 
 <div class="row hero-row mt6">
-  <div class="large-8 small-12 columns mt5">
+  <div class="large-8 small-12 columns mt5 mb5">
     <div class="horizontal-bar"></div>
-    <h1 class="font-light">hell<span class="font-primary-color">o</span></h1>
+    <h1 class="font-light">nam<span class="font-primary-color">a</span>ste</h1>
   </div>
 </div>
-<div class="row mt6 mb6">
-  <div class="row">
-    <div class="large-4 medium-4 columns display-pic">
-      <img src="/assets/images/display-picture.jpg"/>
-    </div>
-    <div class="large-7 medium-8 columns ph3">
-      <p class="hero-text text-justify">I am <b>Anagh Sharma</b>, a Designer and Creative born and currently based in New Delhi, India. I have been doing <b>Digital Product Design</b> from last couple of years. Since then I have successfully built and published several apps and websites.<br><br>I have experience and expertise in Mobile App Design, Desktop app design and Website design starting from sketches, Information Architecture, Navigation Flows, Wireframing, Prototyping, etc. There have been many products in which I have worked from the nascent stage until the release day which resulted in kick-ass products. Those products have been loved by millions of people and have been featured by Microsoft, Nokia, Gizmodo and many more internet media.<br><br>Having a background in Computer Science &amp; Engineering helps me to understand the technical and time constraints of a project. When I was 13, parents bought me a computer, a brand new machine with Windows XP. I was awestruck with it. I used "Paint" program a lot and got inspired by the fact that what a software can do. Since then I aspired to build software.<br><br>In the past, I have worked with Snapdeal, one of India's largest e-commerce websites. In the future, I am looking forward to work on challenging products. </p>
-    </div>
+<div class="row mt6 mb5">
+  <div class="large-5 medium-4 columns display-pic pr5">
+    <img src="/assets/images/display-picture.jpg"/>
+  </div>
+  <div class="large-7 medium-8 columns ph3">
+    <p class="hero-text text-justify">I am <strong>Anagh Sharma</strong>, a Designer and Creative born and currently based in New Delhi, India. I have been doing Digital Product Design from last couple of years with a strong focus on making. Since then I have successfully <strong>designed, built and published</strong> several products including <strong>mobile apps and websites.</strong><br><br>I have always believed in the idea of making which powers me to bring my ideas to life. There have been many products in which I have worked from the nascent stage until the release day which resulted in kick-ass products. Those products have been loved by millions of people and have been featured by Microsoft, Nokia, Gizmodo and many more internet media.<br><br>I am always ready and eager to solve problems that I encounter everyday be it detecting the colour and hence the type of bus (AC/Non AC) in the dark or letting people know the probability of a crime at their locations at a given time. If you are trying to solve our day-to-day problems and want a helping hand, reach out to me at - </p>
+    <ul class="social-icons ml0 mt4">
+      <li><a href="{{ site.email }}" class="social-icon"> <i class="fa fa-envelope fa-lg"></i></a></li>
+      <li><a href="{{ site.twitter }}" class="social-icon mh1"> <i class="fa fa-twitter fa-lg"></i></a></li>
+      <li><a href="{{ site.facebook }}" class="social-icon"> <i class="fa fa-facebook fa-lg"></i></a></li>
+    </ul>
+  </div>
+</div>
+<div class="row">
+  <div class="columns">
+    <hr class="font-secondary">
+    <!-- <h6 class="font-bold font-secondary quiet">STILL HERE?</h6> -->
   </div>
 </div>
