--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ keywords: design, portfolio, development, designer
       <div style="width: 57px;" class="section-heading-bar-dark"></div>
     </div>
     <div class="row mt5 mb6">
-      <div class="large-9 middle-6 small-12 columns divider pr3">
+      <div class="large-9 middle-6 small-12 columns pr3">
         <hr class="font-secondary"/>
         {% for post in site.posts limit:1 %}
           <h6 class="f6 font-medium font-secondary mt4 mb1">LATEST ARTICLE / READ TIME - {{ post.read-time}}</h6>
