Updated about page

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -25,9 +25,16 @@ keywords: anagh sharma, design, portfolio, development, designer
     </ul>
   </div>
 </div>
-<div class="row">
+<div class="row mb6">
   <div class="columns">
     <hr class="font-secondary">
-    <!-- <h6 class="font-bold font-secondary quiet">STILL HERE?</h6> -->
+    <h6 class="font-bold font-secondary quiet mt4 mb3">STILL HERE?</h6>
+    <ul>
+      <li>I really like Video Games - to explore how much creative humans can get.</li>
+      <li class="mv1">Have played Grand Theft Auto series uncountable times.</li>
+      <li>A shoe dog with an eye for sophisticatedly designed shoes especially Nike (and sometimes Adidas Originals). Currently rocking Nike Free Runner 2016 and Adidas Originals NMD R1 - both of them simple and beautiful.</li>
+      <li class="mv1">Everyday listening to Linkin Park, U2, Coldplay, One Republic and The Chain Gangs of 1974.</li>
+      <li>Currently reading “The Everything Store: Jeff Bezos and the Age of Amazon” and getting more into Motion Design.</li>
+    </ul>
   </div>
 </div>
