Updated the garage page

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -32,9 +32,9 @@ keywords: anagh sharma, design, portfolio, development, designer
     <ul>
       <li>I really like Video Games - to explore how much creative humans can get.</li>
       <li class="mv1">Have played Grand Theft Auto series uncountable times.</li>
-      <li>A shoe dog with an eye for sophisticatedly designed shoes especially Nike (and sometimes Adidas Originals). Currently rocking Nike Free Runner 2016 and Adidas Originals NMD R1 - both of them simple and beautiful.</li>
-      <li class="mv1">Everyday listening to Linkin Park, U2, Coldplay, One Republic and The Chain Gangs of 1974.</li>
-      <li>Currently reading “The Everything Store: Jeff Bezos and the Age of Amazon” and getting more into Motion Design.</li>
+      <li>A shoe dog with an eye for sophisticated shoes especially Nike and Adidas Originals. Currently rocking Nike Free Runner 2016 and Adidas Originals NMD R1 - both of them simple and beautiful.</li>
+      <li class="mv1">Everyday listening to Linkin Park, U2, Coldplay, One Republic, Twenty One Pilots, The Weeknd and The Chain Gangs of 1974.</li>
+      <li>Currently reading “The Everything Store: Jeff Bezos and the Age of Amazon” and trying to delve deep into Motion Design.</li>
     </ul>
   </div>
 </div>
