--- a/_pages/garage.html
+++ b/_pages/garage.html
@@ -7,9 +7,41 @@ keywords: anagh sharma, design, portfolio, development, designer
 ---
 
 <div class="row hero-row mv6">
-  <div class="large-8 small-12 columns mt5">
+  <div class="large-8 small-12 columns mt5 mb4">
     <div class="horizontal-bar"></div>
     <h1 class="font-light">The Gar<span class="font-primary-color">a</span>ge</h1>
-    <p class="mb5">Building things.</p>
   </div>
+</div>
+<div class="row ph1 mt5">
+  <div class="columns">
+    <div class="garage-background pv5">
+      <img class="float-center" src="/assets/images/the-garage-hero.svg"></img>
+    </div>
+  </div>
+</div>
+<div class="row mt5">
+  <div class="large-6 medium-6 small-12 columns mt4">
+    <h6 class="font-bold font-secondary quiet">MAKING THINGS</h6>
+    <p class="mt3">The Garage is the place where I build things. Welcome to this place if you like to build things. I have been building stuff using C#, XAML and Visual Studio. From the past couple of months, I have been getting serious with front-end development.</p>
+  </div>
+</div>
+<div class="row mt3 mb6">
+    <div class="large-9 middle-6 small-12 columns divider pr3">
+        <div class="mt5">
+          <h6 class="f6 font-medium font-secondary">LATEST COOKIES</h6>
+        </div>
+        <div class="row">
+            <ul class="no-bullet">
+              <li class="blog-list mv3 pv3 ph3">
+                <a href="" class="heading font-content font-secondary-bold f4 lh-title">Building a native macOS Lyrics app using Musixmatch API</a>
+              </li>
+              <li class="blog-list mv3 pv3 ph3">
+                <a href="" class="heading font-content font-secondary-bold f4 lh-title">Switching to Jekyll and Github Pages for my personal website</a>
+              </li>
+            </ul>
+        </div>
+      </div>
+      <div class="large-3 middle-3 columns">
+        
+    </div>
 </div>
