Updated Uber project

--- a/_pages/projects/uber.html
+++ b/_pages/projects/uber.html
@@ -18,25 +18,40 @@ keywords: design, portfolio, development, designer
         <div class="row">
           <div class="columns">
             <a class="heading disabled">
-              <div class="portfolio-project-card horizontal-rect-12 identity-hero mb2">
+              <div class="portfolio-project-card horizontal-rect-12 uber-hero mb2">
               </div>
             </a>
           </div>
         </div>
         <div class="row">
             <div class="large-3 medium-3 small-collapsed columns">
-                <div class="content-table-bar" style="display: inline-block; height: 10.25rem;"></div>
+                <div class="content-table-bar" style="display: inline-block; height: 8.25rem;"></div>
                 <ul class="vertical-menu no-bullet ml3" style="display: inline-block; vertical-align: top;">
                     <li class="pv1 font-dark">Overview</li>
                     <li class="pv1 font-dark">Problem</li>
                     <li class="pv1 font-dark">Research</li>
-                    <li class="pv1 font-dark">Ideas</li>
                     <li class="pv1 font-dark">Visual Design</li>
                 </ul>
             </div>
             <div class="large-7 medium-7 end columns">
-                <h5 class="font-dark font-secondary-bold font-content">Problem</h5>
-                <p class="text-justify font-dark lh-copy mt4"></p>
+                <h5 class="font-dark font-secondary-bold font-content">Overview</h5>
+                <p class="text-justify font-dark lh-copy mt4">This project was done as part of a hypothetical project for Uber design assignment. The objective was to create an infographics from scratch demonstrating the pros of ride sharing in a city like New Delhi.</p>
+                <h5 class="font-dark font-secondary-bold font-content mt5">Problem</h5>
+                <p class="text-justify font-dark lh-copy mt4">The problem statement aligns with the fact that a car remains unused for most of the time of the day and even when used only one person uses it.
+                  <br><br>10 million cars in Delhi are used ineffectively.
+                  <ol class="font-dark text-justify lh-copy mb4">
+                    <li class="mv2">The car is unused for 23 hours each day.</li>
+                    <li class="mv2">Average car occupancy is only 1.2 persons.</li>
+                    <li class="mv2">70% of households in Delhi have 2 or more cars.</li>
+                    <li class="mv2">If more people travel together, only 1/3rd of the current number of cars is needed.</li>
+                  </ol>
+                </p>
+                <h5 class="font-dark font-secondary-bold font-content mt5">Research</h5>
+                <p class="text-justify font-dark lh-copy mt4">I hadn't done any infographics project before this. To make sure that the infographics resonates with the brand Uber, I decided to go through each and every brand guideline that was publically available at <a class="font-primary-color">brand.uber.com</a>. I also explored their newsroom page and twitter profile to get the hint of artworks that they use.</p>
+                <h5 class="font-dark font-secondary-bold font-content mt5">Visual Design</h5>
+                <p class="text-justify font-dark lh-copy mt4">I came up with this solution at third iteration. In the first two iterations, I was trying to focus more on the visualisation through cars. I wasn't going anywhere with that solution since those elements were distracting from the data.</p>
+                <img class="mt3" src="/assets/images/projects/uber/cs-first.jpg"/>
+                <h5 class="font-dark font-content font-secondary text-center mt5 mb6">That's all folks</h5> 
             </div>
         </div> 
       </div>
