--- a/_pages/store.html
+++ b/_pages/store.html
@@ -31,7 +31,7 @@ keywords: anagh sharma, design, portfolio, development, designer
           <div class="row">
             <div class="columns left-collapse right-collapse small-collapse">
                 <div class="wallpapers-store-thumbnail store-product-container horizontal-rect-8 mb2">
-                    <a href="" target="_blank" style="position:absolute; left: 5%; margin: auto; bottom: 9%;" class="action-button font-bold">BUY NOW</a>
+                    <a href="" target="_blank" style="position:absolute; left: 5%; margin: auto; bottom: 9%;" class="action-button font-bold">COMING SOON</a>
                 </div>
             </div>
           </div>
