Updated XBOX project

--- a/_pages/projects/xbox.html
+++ b/_pages/projects/xbox.html
@@ -71,6 +71,8 @@ keywords: design, portfolio, development, designer
                 <h5 class="font-dark font-secondary-bold font-content mt5">Visual Design</h5>
                 <img src="/assets/images/projects/xbox/cs-second.jpg" class="mt4"/>
                 <img src="/assets/images/projects/xbox/cs-third.jpg" class="mt4"/>
+                <img src="/assets/images/projects/xbox/cs-fourth.jpg" class="mt4 mb6"/>
+                <!-- <h5 class="font-dark font-content font-secondary text-center mt5 mb6">That's all folks</h5> -->
             </div>
         </div> 
       </div>
