Added a divider before footer section

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ keywords: design, portfolio, development, designer
         <img class="float-center" src="/assets/images/the-garage-hero.svg"></img>
       </div>
     </div>
-    <div class="row mt5 mb6">
+    <div class="row mt5">
       <div class="large-6 medium-6 columns mb5">
         <p class="text-justify mt3 pb5">The Garage is the place where I build things. Welcome to this place if you like to build things. I have been building stuff using C#, XAML and Visual Studio. From the past couple of months, I have been getting serious with front-end development. </p>
         <a href="{{ site.url }}/the-garage" class="primary quiet font-medium font-primary-color">EXPLORE THE PROJECT</a>
