Added switching to jekyll post

--- a/index.html
+++ b/index.html
@@ -103,18 +103,18 @@ keywords: design, portfolio, development, designer
         </div>
         <div class="row">
           <div class="large-4 medium-4 columns mt1">
-            <a href="{{ site.url }}/blog/from-the-pen-of-an-insecure-designer/" class="primary no-decoration-light">  
+            <a href="{{ site.url }}/blog/the-power-of-side-projects/" class="primary no-decoration-light">  
               <div class="blog-card pt3">
-                <h5 class="f4 mh3 font-secondary-bold lh-title">From the pen of an insecure Designer (?)</h5>
-                <h6 class="f6 mh3 font-medium font-secondary">OCTOBER 13, 2016<br>READ TIME - 2m 34s</h6>
+                <h5 class="f4 mh3 font-secondary-bold lh-title">The Power of Side Projects</h5>
+                <h6 class="f6 mh3 font-medium font-secondary">MARCH 14, 2017<br>READ TIME - 7m 25s</h6>
               </div>
             </a>
           </div>
           <div class="large-4 medium-4 columns mt1">
-            <a href="https://medium.com/@AnaghSharma/journey-from-idea-to-users-a-behance-app-e9ddeeeb2239" class="primary no-decoration-light">  
+            <a href="{{ site.url }}/blog/from-the-pen-of-an-insecure-designer/" class="primary no-decoration-light">  
               <div class="blog-card pt3">
-                <h5 class="f4 mh3 font-secondary-bold lh-title">Journey from idea to users — A Behance app</h5>
-                <h6 class="f6 mh3 font-medium font-secondary">DECEMBER 09, 2015<br>READ TIME - 6m 03s</h6>
+                <h5 class="f4 mh3 font-secondary-bold lh-title">From the Pen of an Insecure Designer</h5>
+                <h6 class="f6 mh3 font-medium font-secondary">OCTOBER 07, 2016<br>READ TIME - 2m 34s</h6>
               </div>
             </a>
           </div>
