Updated the garage page

--- a/_pages/garage.html
+++ b/_pages/garage.html
@@ -36,7 +36,7 @@ keywords: anagh sharma, design, portfolio, development, designer
                 <a href="" class="heading font-content font-secondary-bold f4 lh-title">Building a native macOS Lyrics app using Musixmatch API</a>
               </li>
               <li class="blog-list mv3 pv3 ph3">
-                <a href="" class="heading font-content font-secondary-bold f4 lh-title">Switching to Jekyll and Github Pages for my personal website</a>
+                <a href="{{ site.url }}/blog/switching-to-jekyll-and-github-pages/" class="heading font-content font-secondary-bold f4 lh-title">Switching to Jekyll and Github Pages for my personal website</a>
               </li>
             </ul>
         </div>
