--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ keywords: design, portfolio, development, designer
             <a href="" class="heading font-content font-secondary-bold f5 lh-title">Building a native macOS Lyrics app using Musixmatch API</a>
           </li>
           <li class="blog-list mv3 pv2 ph3">
-            <a href="" class="heading font-content font-secondary-bold f5 lh-title">Switching to Jekyll and Github Pages for my personal website</a>
+            <a href="{{ site.url }}/blog/switching-to-jekyll-and-github-pages/" class="heading font-content font-secondary-bold f5 lh-title">Switching to Jekyll and Github Pages for my personal website</a>
           </li>
         </ul>
       </div>
