Added other projects at end of case study

--- a/_pages/projects/identity.html
+++ b/_pages/projects/identity.html
@@ -82,9 +82,10 @@ keywords: design, portfolio, development, designer
                 <img src="/assets/images/projects/identity/cs-fifth.jpg"/>
                 <h6 class="font-dark font-medium mt5">Other Components</h6>
                 <p class="text-justify font-dark lh-copy mt3"><a class="font-primary-color" href="{{ site.url }}">This website</a> has been designed and built keeping the different audience in mind. I have also used <strong>Patterns</strong> throughout the identity and website. I will design and build different components if something comes up in future.</p>
-                <h5 class="font-dark font-content font-secondary text-center mt5 mb6">That's all folks</h5>
+                <h5 class="font-dark font-content font-secondary text-center mv5">That's all folks</h5>
             </div>
         </div> 
       </div>
     </div>    
 </section>
+{% include projects.html %}
