--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Home
-description: This is my personal website. Welcome.
+description: I am Anagh Sharma - a Digital Product Designer from New Delhi, India. I design and build digital products people love to use.
 keywords: design, portfolio, development, designer
 ---
 
