Updated title and description of projects

--- a/_pages/projects/behance.html
+++ b/_pages/projects/behance.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: View for Behance Project
-description: Behance on your Windows Phone
+title: View for Behance
+description: View for Behance is a Behance app which is designed and built to offer an enriching and native experience on Windows Phone.
 permalink: '/projects/view-for-behance/'
-keywords: design, portfolio, development, designer
+keywords: behance, windows, app, phone
 ---
 
 <div class="row mt6">
