--- a/_pages/projects/identity.html
+++ b/_pages/projects/identity.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Personal Identity Project
-description: Branding Yourself
+title: Personal Identity
+description: Personal identity revolves around building a unique identity of yourself. It depends on the philosophy you follow and the value it creates for the audience. It tells a story about who you are and what you do.
 permalink: '/projects/personal-identity/'
-keywords: design, portfolio, development, designer
+keywords: branding, identity, design, storytelling
 ---
 
 <div class="row mt6">
