--- a/_pages/projects/uber.html
+++ b/_pages/projects/uber.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: Uber Infographics
-description: Infographics for Uber
+description: Most of the cars in the metro cities remain unused for most of the time of the day and even when used only one person uses it.
 permalink: '/projects/uber/'
-keywords: design, portfolio, development, designer
+keywords: uber, infographics, ridesharing, carpooling
 ---
 
 <div class="row mt6">
