--- a/_pages/projects/xbox.html
+++ b/_pages/projects/xbox.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: XBOX Project
-description: Re-thinking the XBOX experience on mobile
+title: XBOX App
+description: Re-thinking the XBOX experience on mobile to tackle the foundational flaws
 permalink: '/projects/xbox/'
-keywords: design, portfolio, development, designer
+keywords: design, xbox, iphone, mobile, app, console
 ---
 
 <div class="row mt6">
