Updated title and description of every page

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: About
-description: This is my personal website. Welcome.
+description: About Anagh Sharma, a Designer and Creative from New Delhi, India
 permalink: '/about/'
-keywords: anagh sharma, design, portfolio, development, designer
+keywords: anagh sharma, design, creative, portfolio, development, designer
 ---
 
 <div class="row hero-row mt6">
