--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: Blog
-description: My Personal Blog
+description: Anagh Sharma's Blog - a place to share design and other life experiences
 permalink: '/blog/'
-keywords: blog, writing, design, portfolio, development, designer, experience
+keywords: blog, writing, design, experience
 ---
 
 <div class="row mt6 mb6">
