--- a/_pages/garage.html
+++ b/_pages/garage.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: The Garage
-description: This is my personal website. Welcome.
+description: The Garage is the place where I build things. Welcome to this place if you like to build things.
 permalink: '/the-garage/'
-keywords: anagh sharma, design, portfolio, development, designer
+keywords: anagh sharma, design, development, designer
 ---
 
 <div class="row hero-row mv6">
