--- a/_pages/room.html
+++ b/_pages/room.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: The Design Room
-description: This is my personal website. Welcome.
+description: The Design Room is the place where I experiment with designing things.
 permalink: '/the-design-room/'
-keywords: anagh sharma, design, portfolio, development, designer
+keywords: anagh sharma, design, experiment, designer
 ---
 
 <div class="row hero-row mv6">
