--- a/_pages/store.html
+++ b/_pages/store.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 title: Store
-description: This is my personal website. Welcome.
+description: Store is the place where I sell digital stuff.
 permalink: '/store/'
-keywords: anagh sharma, design, portfolio, development, designer
+keywords: store, shop, download
 ---
 
 <div class="row hero-row mv6">
