Updated alt attribute of images

--- a/_pages/projects/identity.html
+++ b/_pages/projects/identity.html
@@ -36,7 +36,7 @@ keywords: branding, identity, design, storytelling
             <div class="large-7 medium-7 end columns">
                 <h5 class="font-dark font-secondary-bold font-content">Overview</h5>
                 <p class="text-justify font-dark lh-copy mt4">Personal identity revolves around building a unique identity of yourself. It is not limited to your social media profiles and certainly not to your logotype. Altogether it depends on the philosophy you follow and the value it creates for the audience. It tells a story about who you are and what you do.<br><br> </p>
-                <img src="/assets/images/projects/identity/cs-first.jpg"/>
+                <img src="/assets/images/projects/identity/cs-first.jpg" alt="Design and Make"/>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Story</h5>
                 <p class="text-justify font-dark lh-copy mt4">I started working on this project in July 2015 but this project never took off with great enthusiasm. We all procrastinate, don't we? And one of the reasons behind this is the fear of failure. We do not want to fail and that is why we are afraid of trying things. Even if we do start a project, we want it to be perfect. As perfect as Utopia. I was not going anywhere with the project because I wanted the identity to be perfect right from the beginning. I did many iterations but did not publish or produce anything deliverable because I was never satisfied with any iteration. <br><br>Coming back to the project, the personal identity and the concept behind it. I named this project as <strong>/Project Home/</strong>. A home is the place where we live. A place where people can find us, meet us and know who we are. Similarly, personal identity is loosely based on the same fact. For a digital product designer, the centre for the personal identity is the website, acting as the Home. </p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Problem</h5>
@@ -72,14 +72,14 @@ keywords: branding, identity, design, storytelling
                 </p>
                 <h6 class="font-dark font-medium mt5">Logotype</h6>
                 <p class="text-justify font-dark lh-copy mt3">I started sketching keeping the reference - <strong>/Home/</strong> in my mind. I wanted to take it into account while designing the components. Looking around in my home sparked a lot of ideas for shapes and patterns. <br><br>I did somewhere around 20 iterations of the logotype before finalising it - </p>
-                <img src="/assets/images/projects/identity/cs-second.jpg"/>
-                <img src="/assets/images/projects/identity/cs-third.jpg" class="mt3"/>
+                <img src="/assets/images/projects/identity/cs-second.jpg" alt="Anagh Sharma logo iterations"/>
+                <img src="/assets/images/projects/identity/cs-third.jpg" class="mt3" alt="Anagh Sharma logo concept"/>
                 <h6 class="font-dark font-medium mt5">Colour</h6>
                 <p class="text-justify font-dark lh-copy mt3">Initially I picked the shades of Blue and Green for the identity which represent the colour of sky and earth (above and below the Home). But switched to a fiery red for the energy and passion it symbolises.</p>
-                <img src="/assets/images/projects/identity/cs-fourth.jpg"/>
+                <img src="/assets/images/projects/identity/cs-fourth.jpg" alt="Anagh Sharma logo colour demonstration"/>
                 <h6 class="font-dark font-medium mt5">Typeface</h6>
                 <p class="text-justify font-dark lh-copy mt3">Selecting a typeface for any project can be a tricky and time consuming process. I picked up Roboto as my primary typeface for it works good with Digital and Print Media. For the secondary typeface, I selected Playfair Display; a serif typeface. Another motive for selecting these typefaces is that these are free and a part of open source software. </p>
-                <img src="/assets/images/projects/identity/cs-fifth.jpg"/>
+                <img src="/assets/images/projects/identity/cs-fifth.jpg" alt="Anagh Sharma typeface demonstration"/>
                 <h6 class="font-dark font-medium mt5">Other Components</h6>
                 <p class="text-justify font-dark lh-copy mt3"><a class="font-primary-color" href="{{ site.url }}">This website</a> has been designed and built keeping the different audience in mind. I have also used <strong>Patterns</strong> throughout the identity and website. I will design and build different components if something comes up in future.</p>
                 <h5 class="font-dark font-content font-secondary text-center mv5">That's all folks</h5>
