--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ keywords: design, portfolio, development, designer
         </div>
         <div class="row mt6">
           <div class="large-4 medium-4 columns mt3">
-            <img src="/assets/images/the-room-hero.svg"></img>
+            <img src="/assets/images/the-room-hero.svg" alt="Hello from The Design Room"/>
           </div>
           <div class="large-6 large-offset-1 end medium-8 columns mt3">
             <p class="room-text text-justify">The Design Room is the place where I experiment with designing things. The fun part is that when you are experimenting you do not have to put constraints on your process, the timeline and the deliverables. The objective of starting a project like this was to enhance my visual design skills. I have been receiving a lot of response on <a href="https://www.instagram.com/the.design.room/" target="_blank" class="font-primary-color">Instagram</a> lately and have been looking to improve this project since then.</p>
@@ -159,7 +159,7 @@ keywords: design, portfolio, development, designer
     </div>
     <div class="row ph1 mt5">
       <div class="garage-background pv5">
-        <img class="float-center" src="/assets/images/the-garage-hero.svg"></img>
+        <img class="float-center" src="/assets/images/the-garage-hero.svg" alt="The Garage Logo"/>
       </div>
     </div>
     <div class="row mt5">
