--- a/_pages/projects/uber.html
+++ b/_pages/projects/uber.html
@@ -50,7 +50,7 @@ keywords: uber, infographics, ridesharing, carpooling
                 <p class="text-justify font-dark lh-copy mt4">I hadn't done any infographics project before this. To make sure that the infographics resonates with the brand Uber, I decided to go through each and every brand guideline that was publically available at <a class="font-primary-color">brand.uber.com</a>. I also explored their newsroom page and twitter profile to get the hint of artworks that they use.</p>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Visual Design</h5>
                 <p class="text-justify font-dark lh-copy mt4">I came up with this solution at third iteration. In the first two iterations, I was trying to focus more on the visualisation through cars. I wasn't going anywhere with that solution since those elements were distracting from the data.</p>
-                <img class="mt3" src="/assets/images/projects/uber/cs-first.jpg"/>
+                <img class="mt3" src="/assets/images/projects/uber/cs-first.jpg" alt="Uber Infographics"/>
                 <h5 class="font-dark font-content font-secondary text-center mt5 mb6">That's all folks</h5> 
             </div>
         </div> 
