--- a/_pages/projects/xbox.html
+++ b/_pages/projects/xbox.html
@@ -67,11 +67,11 @@ keywords: design, xbox, iphone, mobile, app, console
                         <li><strong>Profile</strong> - Personal Info, Message Friends.</li>
                     </ol>
                 </p>
-                <img src="/assets/images/projects/xbox/cs-first.jpg" class="mt4"/>
+                <img src="/assets/images/projects/xbox/cs-first.jpg" class="mt4" alt="Navigation Flow"/>
                 <h5 class="font-dark font-secondary-bold font-content mt5">Visual Design</h5>
-                <img src="/assets/images/projects/xbox/cs-second.jpg" class="mt4"/>
-                <img src="/assets/images/projects/xbox/cs-third.jpg" class="mt4"/>
-                <img src="/assets/images/projects/xbox/cs-fourth.jpg" class="mt4 mb6"/>
+                <img src="/assets/images/projects/xbox/cs-second.jpg" class="mt4" alt="XBOX Logo"/>
+                <img src="/assets/images/projects/xbox/cs-third.jpg" class="mt4" alt="App Screens"/>
+                <img src="/assets/images/projects/xbox/cs-fourth.jpg" class="mt4 mb6" alt="App Screens"/>
                 <!-- <h5 class="font-dark font-content font-secondary text-center mt5 mb6">That's all folks</h5> -->
             </div>
         </div> 
